# ghimawan-resolusi

./: LICENSE  Main.hs  Makefile  README  Setup.lhs  regex-genex.cabal
src/Regex/: Genex.hs
src/Regex/Genex/: Normalize.hs  Pure.hs
