Name            : regex-genex
Version         : 0.7.0
license         : OtherLicense
license-file    : LICENSE
cabal-version   : >= 1.6
copyright       : 2011-2015 Audrey Tang
maintainer      : Audrey Tang <audreyt@audreyt.org>
category        : Text, Regex
stability       : experimental
build-type      : Simple
homepage        : https://github.com/audreyt/regex-genex
synopsis        : From a regex, generate all possible strings it can match
description     : From a regex, generate all possible strings it can match
author          : Audrey Tang <audreyt@audreyt.org>